FIX: Set correct Codemagic instance type

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,9 +1,7 @@
-# A basic Flutter workflow for Codemagic
-
 workflows:
   flutter-workflow:
     name: Flutter Workflow
-    instance_type: macos_sonoma_m2
+    instance_type: macos_m2
     
     scripts:
       - name: Get Flutter packages
