--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,7 +24,8 @@ def flutter_root
   end
 end
 
-require_relative File.join('..', 'Flutter', 'podhelper')
+# This is the new, correct line that replaces the old one.
+require File.join(flutter_root, 'packages', 'flutter_tools', 'bin', 'podhelper')
 
 flutter_ios_podfile_setup
 
@@ -38,9 +39,5 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
-    target.build_configurations.each do |config|
-      config.build_settings['SWIFT_VERSION'] = '5.0'
-      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-    end
   end
 end
