--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,7 @@ workflows:
     instance_type: mac_mini_m2
 
     environment:
-      flutter: stable
+      flutter: stable  # or specific version like 3.19.6
       xcode: latest
       cocoapods: default
       vars:
@@ -17,20 +17,20 @@ workflows:
           flutter clean
           flutter pub get
 
-          # Optional: Manually run pod install just to be sure
           cd ios
           pod install
           cd ..
 
       - name: Build iOS Release (No Code Signing)
         script: |
-          flutter build ios --release --no-codesign
+          flutter build ios --release --no-codesign --obfuscate --split-debug-info=build/debug_info
 
     artifacts:
       - build/ios/iphoneos/Runner.app
-      - build/ios/ipa/*.ipa  # optional, if you export ipa in future
+      - build/ios/ipa/*.ipa
+      - build/debug_info/**  # include if you added split-debug-info
 
-    # Optional: Enable this if you later want code signing
-    # code_signing:
-    #   provisioning_profiles:
-    #     ios_profile: Your_Provisioning_Profile_Name
+    cache:
+      cache_paths:
+        - ~/.pub-cache
+        - ios/Pods
