--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,8 +4,11 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+    
+    <!-- This is the custom name for your app on the home screen -->
 	<key>CFBundleDisplayName</key>
 	<string>Mm Associates</string>
+    
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -24,6 +27,19 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+
+    <!-- ADDED: Required permission descriptions for your plugins -->
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs access to your location to show it on the map and find properties near you.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app needs background location access to provide continuous location-based services.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app needs access to your photo library to let you upload images for your profile or property listings.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>This app needs access to your camera to let you take and upload photos for your profile or property listings.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app needs access to your microphone to record audio for property videos.</string>
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
