--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=G:\flutter
-FLUTTER_APPLICATION_PATH=G:\MMAssociates
+FLUTTER_ROOT=/Users/macos/development/flutter
+FLUTTER_APPLICATION_PATH=/Users/macos/Desktop/MMAssociates-1
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
