--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,38 +4,27 @@ workflows:
     instance_type: mac_mini_m2
 
     environment:
-      flutter: stable  # or specific version like 3.19.6
+      flutter: stable
       xcode: latest
       cocoapods: default
       vars:
         CM_CLEAN: true
 
-    # --- THIS IS THE CORRECTED SCRIPT SECTION ---
     scripts:
       - name: Install Deps and Build iOS App
         script: |
-          set -e # Exit immediately if a command fails
-
-          # --- THE DEFINITIVE FIX ---
-          # This installs the tool your Podfile's post_install script needs
-          # to programmatically fix the Xcode project file after the Flutter
-          # tool breaks it. This MUST run first.
+          set -e
           gem install xcodeproj
-
-          # Standard Flutter build steps
           flutter clean
           flutter pub get
-
-          # The flutter build command will now automatically run 'pod install',
-          # where our self-healing script will execute successfully.
           flutter build ios --release --no-codesign --obfuscate --split-debug-info=build/debug_info
 
     artifacts:
       - build/ios/iphoneos/Runner.app
       - build/ios/ipa/*.ipa
-      - build/debug_info/**  # include if you added split-debug-info
+      - build/debug_info/**
 
+    # --- THIS IS THE CORRECTED CACHE SECTION ---
     cache:
       cache_paths:
         - ~/.pub-cache
-        - ios/Pods
