--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,12 +11,27 @@ workflows:
         CM_CLEAN: true
 
     scripts:
-      - name: Install Deps and Build iOS App
+      - name: Rebuild iOS folder and Build App
         script: |
-          set -e
+          set -e # Exit immediately if a command fails
+
+          echo "--- 1. Installing dependencies ---"
           gem install xcodeproj
-          flutter clean
           flutter pub get
+
+          echo "--- 2. Recreating the iOS folder from scratch (The Brute Force Fix) ---"
+          rm -rf ios # Delete the old ios folder entirely
+          flutter create --platforms=ios . # Recreate a fresh one
+
+          echo "--- 3. Restoring critical configuration files ---"
+          # Ensure you have created the 'ios_config_backup' folder in your repo
+          cp ios_config_backup/Info.plist ios/Runner/
+          cp -r ios_config_backup/Assets.xcassets ios/Runner/
+          # Uncomment the next line if you use Firebase
+          # cp ios_config_backup/GoogleService-Info.plist ios/Runner/
+
+          echo "--- 4. Building the iOS App ---"
+          # This build will run on a perfectly clean, newly generated project
           flutter build ios --release --no-codesign --obfuscate --split-debug-info=build/debug_info
 
     artifacts:
@@ -24,7 +39,6 @@ workflows:
       - build/ios/ipa/*.ipa
       - build/debug_info/**
 
-    # --- THIS IS THE CORRECTED CACHE SECTION ---
     cache:
       cache_paths:
         - ~/.pub-cache
