--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,25 +11,43 @@ workflows:
         CM_CLEAN: true
 
     scripts:
-  - name: Rebuild iOS folder and Build App
-    script: |
-      set -e
+      - name: Rebuild iOS folder and Build App
+        script: |
+          set -e # Exit immediately if a command fails
 
-      echo "--- 1. Installing dependencies ---"
-      # We don't need xcodeproj anymore, but it's harmless to keep.
-      gem install xcodeproj
-      flutter pub get
+          echo "--- 1. Installing dependencies ---"
+          # This is kept as good practice, though not strictly needed by this script.
+          gem install xcodeproj
+          flutter pub get
 
-      echo "--- 2. Recreating the iOS folder from scratch ---"
-      rm -rf ios
-      flutter create --platforms=ios .
+          echo "--- 2. Recreating the iOS folder from scratch ---"
+          # This is the core of the fix: creating a perfect environment every time.
+          rm -rf ios
+          flutter create --platforms=ios .
 
-      echo "--- 3. Restoring critical configuration files ---"
-      cp ios_config_backup/Info.plist ios/Runner/
-      cp -r ios_config_backup/Assets.xcassets ios/Runner/
-      cp ios_config_backup/Podfile ios/ # <-- THE NEW, CRITICAL LINE
-      # Uncomment the next line if you use Firebase
-      # cp ios_config_backup/GoogleService-Info.plist ios/Runner/
+          echo "--- 3. Restoring critical configuration files ---"
+          # This copies your custom settings into the newly created folder.
+          # Ensure you have created the 'ios_config_backup' folder in your repo.
+          cp ios_config_backup/Info.plist ios/Runner/
+          cp -r ios_config_backup/Assets.xcassets ios/Runner/
+          
+          # --- THIS IS THE FINAL FIX ---
+          # This line replaces the generic Podfile with your custom one,
+          # which sets the correct iOS deployment target (e.g., 14.0).
+          cp ios_config_backup/Podfile ios/
+          
+          # Uncomment the next line if you use Firebase
+          # cp ios_config_backup/GoogleService-Info.plist ios/Runner/
 
-      echo "--- 4. Building the iOS App ---"
-      flutter build ios --release --no-codesign --obfuscate --split-debug-info=build/debug_info
+          echo "--- 4. Building the iOS App ---"
+          # This build will now run on a perfectly clean, fully-configured project.
+          flutter build ios --release --no-codesign --obfuscate --split-debug-info=build/debug_info
+
+    artifacts:
+      - build/ios/iphoneos/Runner.app
+      - build/ios/ipa/*.ipa
+      - build/debug_info/**
+
+    cache:
+      cache_paths:
+        - ~/.pub-cache
